<resources>
    <string name="app_name">Ficheros en ACDAT</string>

    <!-- Botones de inicio -->
    <string name="btn_Ejercicio1">Ejercicio 1 - Agenda</string>
    <string name="btn_Ejercicio2">Ejercicio 2 - Alarmas</string>
    <string name="btn_Ejercicio3">Ejercicio 3 - Dias lectivos</string>
    <string name="btn_Ejercicio4">Ejercicio 4 - Navegador</string>
    <string name="btn_Ejercicio5">Ejercicio 5 - Downloads</string>
    <string name="btn_Ejercicio6">Ejercicio 6 - Divisas</string>
    <string name="btn_Ejercicio7">Ejercicio 7 - Uploads</string>

    <!-- Agenda (ejercicio 1) -->
    <string name="txtV_NombreContacto">Nombre de contacto:</string>
    <string name="txtV_NumeroContacto">Número de telefono:</string>
    <string name="txtV_CorreoContacto">Correo electrónico:</string>
    <string name="btn_GuardarDatos">Guardar datos</string>
    <string name="btn_ConsultarDatos">Consultar contactos</string>
    <string name="txtV_ListaContactos">Lista de contactos añadidos:</string>


    <!-- Alarmas (ejercicio 2) -->

    <string name="btn_ComenzarAlarmas">Comenzar alarmas</string>
    <string name="txtV_TiempoAlarma">Tiempo</string>
    <string name="txtV_TextoAlarma">Texto de notificación</string>

    <!-- Dias lectivos (ejercicio 3) -->
    <string name="txtV_FechaInicio">Fecha de inicio:</string>
    <string name="txtV_FechaFinal">Fecha de final:</string>
    <string name="btn_ElegirFecha">Elegir fecha</string>
    <string name="btn_Calcular">Calcular dias lectivos</string>
    <string name="txtV_DiasLectivos">Días lectivos entre las fechas selecciondas:</string>

    <!-- Navegador con rdBs (ejercico 4) -->
    <string name="rdB_Java">Java.net</string>
    <string name="rdB_AAHC">AAHC</string>
    <string name="rdB_Volley">Volley</string>
    <string name="btn_Navegar">Navegar</string>
    <string name="txtV_IntroduceURL">Introduce una URL</string>

    <!-- Descargar imagenes (ejercicio 5 -->

    <string name="btn_DescargarImgs">Buscar imagenes</string>
    <string name="edT_URLImgs">Introduce tu URL</string>
    <string name="btn_NextImg">Siguiente imagen</string>
    <string name="btn_PrevImg">Imagen anterior</string>

    <!-- Subir fichero (ejercicio 7 -->
    <string name="btn_BuscarFicheroUpload">Buscar fichero:</string>
    <string name="btn_UploadFichero">Subir fichero</string>
    <string name="txtV_BuscarFichero">Busca tu fichero:</string>


    <!-- Cambio de divisas (ejercicio 6 -->
    <string name="radB_DolaresEuros">Dolares a euros</string>
    <string name="radB_EurosDolares">Euros a dolares</string>
    <string name="btn_Convertir">Convertir</string>
    <string name="txtV_Dolares">Dolares</string>
    <string name="txtV_Euros">Euros</string>
    <string name="txtV_CambioActual">Cambio actual</string>

</resources>
