<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tema2acdat.AgendaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtV_NombreContacto"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <EditText
        android:id="@+id/edT_NombreContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtV_NumeroContacto"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <EditText
        android:id="@+id/edT_NumeroContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtV_CorreoContacto"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <EditText
        android:id="@+id/edT_CorreoContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_GuardarDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_Contactos"
            android:text="@string/btn_GuardarDatos"/>

        <Button
            android:id="@+id/btn_ConsultarDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_Contactos"
            android:text="@string/btn_ConsultarDatos"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtV_ListaContactos"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="205dp">

        <TextView
            android:id="@+id/txtV_ListaContactos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>

</LinearLayout>
