<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        tools:context="com.example.tema2acdat.NavegadorActivity"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtV_IntroduceURL"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="http://ciclos.iesportada.org/"
            android:id="@+id/edT_URL"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdB_Volley"
                    android:id="@+id/rdB_Volley"
                    android:onClick="onClick_Navegar"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdB_Java"
                    android:id="@+id/rdB_Java"
                    android:onClick="onClick_Navegar"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdB_AAHC"
                    android:id="@+id/rdB_AAHC"
                    android:onClick="onClick_Navegar"/>

            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_Navegar"
                android:id="@+id/btn_Navegar"
                android:onClick="onClick_Navegar"/>

        </LinearLayout>

        <WebView
            android:id="@+id/webV_HTTP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
