<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tema2acdat.UploadFileActivity"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtV_BuscarFichero"/>
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_BuscarFicheroUpload"
        android:onClick="onClick_uploadFicheros"
        android:text="@string/btn_BuscarFicheroUpload"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:id="@+id/txtV_InfoFicheroUpload"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_SubirFicheroUpload"
        android:onClick="onClick_uploadFicheros"
        android:text="@string/btn_UploadFichero"
        android:enabled="false"/>

</LinearLayout>
