<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tema2acdat.VisorImgsActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edT_URLImgs"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edT_URLImgs"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:hint="@string/edT_URLImgs"
            android:inputType="textUri" />

        <Button
            android:id="@+id/btn_DescargarImgs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_DescargarImgs"
            android:onClick="onClick_DescargarImgs"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imgV_Descargas"
        android:layout_width="match_parent"
        android:layout_height="350dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_PrevImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_PrevImg"
            android:onClick="onClick_DescargarImgs"
            android:enabled="false"/>

        <Button
            android:id="@+id/btn_NextImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_NextImg"
            android:onClick="onClick_DescargarImgs"
            android:enabled="false"/>

    </LinearLayout>

</LinearLayout>
