<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tema2acdat.AlarmasActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:text="@string/txtV_TiempoAlarma"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtV_TextoAlarma"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:id="@+id/edT_Alarma1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edT_TextoAlarma1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:id="@+id/edT_Alarma2"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edT_TextoAlarma2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:id="@+id/edT_Alarma3"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edT_TextoAlarma3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:id="@+id/edT_Alarma4"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edT_TextoAlarma4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:id="@+id/edT_Alarma5"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edT_TextoAlarma5"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ComenzarAlarmas"
        android:onClick="onClick_ComenzarAlarmas"
        android:text="@string/btn_ComenzarAlarmas"/>

</LinearLayout>
